Ensure main content is visible

--- a/assets/scss/pages/_home.scss
+++ b/assets/scss/pages/_home.scss
@@ -10,7 +10,11 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-    padding:  260px 60px 200px 60px;
+    padding: 
+        2.5*$g-content-space-y 
+        0.5*$g-content-space-y 
+        2.0*$g-content-space-y 
+        0.5*$g-content-space-y;
     
     h1 {
         line-height: 90%;
@@ -41,5 +45,8 @@
     }
 }
 
-
-
+.about-section {
+    position: relative;
+    margin-top: -50px;
+    padding-top: 0;
+  }
